--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Single+Day&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <title>awangran</title>
-    <link rel="icon" type="image/x-icon" href="/assets/cat1.ico">
-    <script src="https://kit.fontawesome.com/67434467bc.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🌸</text></svg>"/>    <script src="https://kit.fontawesome.com/67434467bc.js" crossorigin="anonymous"></script>
    
     
   </head>
